[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commodity-backtest"
version = "0.1.0"
description = "YAML-driven multi-commodity time-series forecasting backtest framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "tabulate>=0.9",
]

[project.optional-dependencies]
trees = [
  "lightgbm>=4.0",
  "xgboost>=2.0",
  "catboost>=1.2",
]
tree = [
  "lightgbm>=4.0",
  "xgboost>=2.0",
  "catboost>=1.2",
]
deep = [
  "torch>=2.1",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
commodity-backtest = "commodity_backtest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]