[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commodity-backtest"
version = "0.1.0"
description = "YAML-driven multi-commodity time-series forecasting backtest framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "tabulate>=0.9",
]

[project.optional-dependencies]
trees = [
  "lightgbm>=4.0",
  "xgboost>=2.0",
  "catboost>=1.2",
]
tree = [
  "lightgbm>=4.0",
  "xgboost>=2.0",
  "catboost>=1.2",
]
deep = [
  "torch>=2.1",
]
aeon = [
  "aeon>=1.3,<2",
]
keras = [
  "tensorflow>=2.15",
  "keras-tcn>=3.5",
]
official-pool = [
  "aeon>=1.3,<2",
  "lightgbm>=4.0",
  "xgboost>=2.0",
  "catboost>=1.2",
  "tensorflow>=2.15",
  "keras-tcn>=3.5",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
commodity-backtest = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backtest*", "config*", "data*", "ensembles*", "eval*", "losses*", "models*", "registry*", "report*", "train*", "wrappers*"]
exclude = ["tests*", "docs*", "examples*", "configs*", "scripts*", "experiments*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
