[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commodity-backtest"
version = "0.1.0"
description = "YAML-driven multi-commodity time-series forecasting backtest framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "tabulate>=0.9",
]

[project.optional-dependencies]
trees = [
  "lightgbm>=4.0",
  "xgboost>=2.0",
  "catboost>=1.2",
]
tree = [
  "lightgbm>=4.0",
  "xgboost>=2.0",
  "catboost>=1.2",
]
deep = [
  "torch>=2.1",
]
graph = [
  "networkx>=3.0",
  "torch>=2.1",
  "torch-spatiotemporal>=0.9",
  "torch-geometric-temporal>=0.56",
  "pyts>=0.13",
  "ts2vg>=1.2",
  "vmdpy>=0.2",
]
aeon = [
  "aeon>=1.3,<2",
]
keras = [
  "tensorflow>=2.15",
  "keras-tcn>=3.5",
]
official-pool = [
  "aeon>=1.3,<2",
  "lightgbm>=4.0",
  "xgboost>=2.0",
  "catboost>=1.2",
  "tensorflow>=2.15",
  "keras-tcn>=3.5",
]
[project.scripts]
commodity-backtest = "corn_forecast.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["corn_forecast*"]
exclude = ["docs*", "configs*", "scripts*", "experiments*"]
